Sat Oct  5 02:53:14 1996  Fredrik Hubinette  <hubbe@teleute.infovav.se>

	* /precompiled/fifo added (with #include <fifo.h>)
	* sprintf now handles zeros in format string correctly

Fri Oct  4 01:45:45 1996  Fredrik Hubinette  <hubbe@beldandy.infovav.se>

	* Threads support added!

Wed Sep 25 01:35:46 1996  Fredrik Hubinette  <hubbe@morpheus.infovav.se>

	* mapping.c: destructed function/objectpointers might now be
	  handled correctly... :)
	* mpz and readline configure files now check that both .h files
	  and libraries exists...

Mon Sep 23 01:20:00 1996  Fredrik Hubinette  <hubbe@morpheus.infovav.se>

	* svalue.h: forgot to include BIT_FUNCTION in BIT_COMPLEX...
	* mapping.c: destructed functionpointers might now be handled
	  correcly
	* testsuite genration changed so every module has it's own
	  testsuite
	* file module: fatal strerror bug fixed
	* mapping.c: bug for destructed objects fixed
	* builtin_functions.c (f_crypt): workaround for sun CC included
	* v0.1 released

Thu Sep 19 14:25:07 1996  Fredrik Hubinette  <hubbe@jolt.infovav.se.>

	* all_efuns renamed to all_constants
	* new efun: errno
	* flat and old mappings removed
	* -p for opcode profiling added
	* gc <-> mapping interaction bug fixed
	* memory leak in for() fixed
	* new opcodes: F_LOCAL_INDEX F_POS_INT_INDEX F_NEG_INT_INDEX
	*              F_STRING_INDEX
	* F_ASSIGN_GLOBAL now works
	* stack allocation through mmap now works
	* gc() and destruct() delayed to be called inside evaluator.
	* put #include <simulate.h> in your files to get old behaviour
	* simulate.lpc removed.
	* perror renamed to werror
	* list renamed to multiset
	* add_efun renamed to add_constant
	* uLPC renamed to Pike

Tue Aug 20 01:16:48 1996  Fredrik Hubinette  <hubbe@signum.se>

	* version 0.000002 released

Tue Aug 13 12:16:06 1996  Fredrik Hubinette  <hubbe@freeone.signum.se>

	* gpmmod should now work with older versions of GMP.

Mon Aug 12 18:08:12 1996  Fredrik Hubinette  <hubbe@sparky.signum.se>
