@@ -1,0 +1,11 @@
+#ifndef DYNAMIC_LOAD_H
+#define DYNAMIC_LOAD_H
+
+/* Prototypes begin here */
+struct module_list;
+void f_load_module(INT32 args);
+void init_dynamic_load();
+void exit_dynamic_load();
+/* Prototypes end here */
+
+#endif
