@@ -335,4 +335,13 @@
 #undef _REENTRANT
 #undef _THREAD_SAFE
 
+/* Define this if you have dlopen() */
+#define HAVE_DLOPEN
+
+/* Define this if you have dlsym() */
+#define HAVE_DLSYM
+
+/* Define this if you have <dlfcn.h> */
+#define HAVE_DLFCN_H
+
 #endif /* MACHINE_H */
